@@ -1,3 +1,4 @@
+- fixed TOP values after restart
 v1.0.1
 - added mammoth tusk item
 - added Mammoth entity
